--- a/config.json
+++ b/config.json
@@ -1,9 +1,25 @@
-{
+
+
+  {
     "development": {
       "username": "root",
       "password": "hsn123",
       "database": "hsn_project",
       "host": "localhost",
+      "dialect": "mysql"
+    },
+    "test": {
+      "username": "root",
+      "password": null,
+      "database": "database_test",
+      "host": "127.0.0.1",
+      "dialect": "mysql"
+    },
+    "production": {
+      "username": "root",
+      "password": null,
+      "database": "database_production",
+      "host": "127.0.0.1",
       "dialect": "mysql"
     }
   }
